--- a/contacts/style.css
+++ b/contacts/style.css
@@ -250,7 +250,8 @@ footer .social li:first-child {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1%;
+    margin-right: 0.7em;
+
 }
 
 footer .social a img {
