--- a/resume/style.css
+++ b/resume/style.css
@@ -541,7 +541,8 @@ footer .social li:first-child {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1%;
+    margin-right: 0.7em;
+
 }
 
 footer .social a img {
